# Roqaba

./: .gitignore  Dockerfile  README.org  docker-compose.yaml  enable-privoxy.sh  manage.py  pyproject.toml  requirements.txt  scenario.org
api/: urls.py  views.py
docker-entrypoint-initdb.d/: create-db.sql  init.sql  init_db.sh
fixture/: products.json  publisher.json
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_alter_book_created_at.py  0003_auto_20210831_1137.py  0004_alter_book_created_at.py  0005_book_ref.py  0006_alter_book_ref.py  0007_auto_20210907_0823.py  0008_book_price_history.py  0009_book_price_history_created_at.py  0010_rename_related_to_book_price_history_book_id.py  0011_auto_20211221_0747.py
main_app/static/: style.css
main_app/templates/main_app/: base.html  edit-product.html  index.html  show-product.html  show-updated-books.html
main_app/templatetags/: main_tags.py
roqaba/: .env  asgi.py  settings.py  urls.py  wsgi.py
scrapy_app/: scrapy_runner.py
scrapy_app/scrapy_app/: items.py  pipelines.py  settings.py
scrapy_app/scrapy_app/middlewares/: ProxyMiddleware.py
scrapy_app/scrapy_app/spiders/: ifconfig.py  irlanguage.py  jangal.py  ketabland.py  rahnama.py  zabanmehr.py  zabanshop.py
